<resources>
    <string name="app_name">Swifty</string>
    <string name="google_map_api_key">AIzaSyBlgz0RJlUUzIY5nW5DvxpMAb9CogjcyPk</string>
    <string name="empty_string"></string>
    <string name="welcome_back">Welcome back!</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="enter_email_address">Enter your email</string>
    <string name="enter_password">Enter your password</string>
    <string name="or">Or</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="logo">logo</string>
    <string name="email_error">Please enter an valid email</string>
    <string name="pw_error">Please enter the password</string>
    <string name="signing_in">Signing you in…</string>
    <string name="login_fail">Invalid email or password. Cannot login.</string>
    <string name="google_sign_in_fail">Cannot login by Google. Try another login method.</string>
    <string name="facebook_app_id">6423193947711083</string>
    <string name="fb_login_protocol_scheme">fb6423193947711083</string>
    <string name="facebook_client_token">bb21910b6b50b1b78d2b1bfef08f465d</string>
    <string name="facebook_sign_in_fail">Cannot login by Facebook. Try another login method.</string>
    <string name="register">Register</string>
    <string name="email_address">E-mail address</string>
    <string name="invalid_email">Invalid E-mail</string>
    <string name="verify_email_address">Verify E-mail address</string>
    <string name="send_to">Send to: </string>
    <string name="invalid_verification_code">Please enter the verification code</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="passwords_not_match">Passwords do not match</string>
    <string name="signup_fail">Cannot signup with this email. Please try another.</string>
    <string name="create_account">Create Account</string>
    <string name="account_created">Account Created!</string>
    <string name="login_now">You can login and add your user profile</string>
    <string name="account_not_created">Account Not Created!</string>
    <string name="retry_registration">Something went wrong.\nPlease make sure your device is online.</string>
    <string name="go_login">Go to login screen</string>
    <string name="go_registration">Retry</string>
    <string name="forgot_password_title">Forgot password</string>
    <string name="login_now_after_reset">Back to login screen</string>
    <string name="send_reset_email">Send Email</string>
    <string name="send_reset_link_success">Reset link sent successful</string>
    <string name="email_not_sent">Email send failed</string>
    <string name="resend_email">Please enter a valid email.</string>
    <string name="check_email_instruction">Please check email for reset password instruction</string>
    <string name="back_to_home_page">Go Back To Home Page</string>
    <string name="worker_preferred_mission_distance_spinner_label">Distance from me</string>
    <string name="worker_preferred_mission_distance_spinner_prompt">Choose a distance</string>
    <string-array name="worker_preferred_mission_distance_choices">
        <item>5km</item>
        <item>10km</item>
        <item>15km</item>
    </string-array>
    <string name="switch_portal">Switch To Agent Portal</string>
    <string name="drawer_logout">Logout</string>
    <string name="no_mission_instruction">Click on a Mission category below to hire an Agent:</string>
    <string name="no_enough_credit">You don\'t have any Credit left to create a Mission</string>
    <string-array name="employer_mission_filter">
        <item>All</item>
        <item>Confirmed</item>
        <item>Disputed</item>
        <item>Open</item>
        <item>Pending Acceptance</item>
    </string-array>
    <string name="no_history_mission">No Missions yet</string>
    <string name="encourage_line">Create one now!</string>
    <string-array name="employer_mission_history_filter">
        <item>All</item>
        <item>Confirmed</item>
        <item>Disputed</item>
        <item>Open</item>
        <item>Pending Acceptance</item>
        <item>Cancelled</item>
        <item>Completed</item>
    </string-array>
    <string-array name="agent_mission_history_filter">
        <item>All</item>
        <item>Confirmed</item>
        <item>Disputed</item>
        <item>Enrolled</item>
        <item>Pending Acceptance</item>
        <item>Cancelled</item>
        <item>Completed</item>
    </string-array>
    <string name="accept_terms_and_conditions_text">I agree to the Terms and Conditions stated above.</string>
    <string name="mission_result_success">Mission Completed!</string>
    <string name="mission_result_failed">Mission Failed!</string>
    <string name="mission_result_description_success">You are now a member of Swifty Daily Service Agency.</string>
    <string name="mission_result_description_failed">Something went wrong.\nPlease try again.</string>
    <string name="home_activity">Home Activity</string>
    <string name="content_description_placeholder">placeholder</string>
    <string name="quit">Quit</string>
    <string name="back">Back</string>
    <string name="hire_workers">Hire workers</string>
    <string name="work">Work !</string>
    <string name="do_both">Do Both</string>
    <string name="next">Next</string>
    <string name="skip_for_now">skip for now</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="extra_auth_header">Extra verification - Extra Authenticity</string>
    <string name="verify_phone_no_header">Verify Phone Number (Optional)</string>
    <string name="personal_ninformation">Personal\nInformation</string>
    <string name="profile">Profile</string>
    <string name="terms_n_nconditions"><![CDATA[Terms & \nConditions]]></string>
    <string name="lawn_mowing">Lawn Mowing</string>
    <string name="confirmed">Confirmed</string>
    <string name="registration_alert">Confirm to quit the registration process?</string>
    <string name="registration_alert_msg">"This will logout your account and the data you entered will not be saved."</string>
    <string name="credit_on_hold">Credit on Hold</string>
    <string name="credit_on_hold_content">Your Credit will be On Hold when:\n
1. You created a mission and it has not yet been Completed; or\n
2. Your mission is Disputed. Credits will be released/deducted after the dispute is resolved.</string>
    <string name="top_up">Top Up</string>
    <string name="fifty_credits">50 Credits</string>
    <string name="one_hundred_credits">100 Credits</string>
    <string name="five_hundred_credits">500 Credits</string>
    <string name="cad_50">CAD 50</string>
    <string name="cad_90">CAD 90</string>
    <string name="ten_percent_off">10% off</string>
    <string name="cad_400">CAD 400</string>
    <string name="twenty_percent_off">20% off</string>
    <string name="transactions">Transactions</string>
    <string name="view_more">View More</string>
    <string name="credit_card_number">Credit Card Number</string>
    <string name="expiration">Expiration</string>
    <string name="cvc_code">CVC Code</string>
    <string name="category_label">Category: </string>
    <string name="start_time_label">Start Time: </string>
    <string name="end_time_label">End Time: </string>
    <string name="select_a_time">Select a time</string>
    <string name="location_label">Location: </string>
    <string name="add_photos_label">(Optional) Add photos and description: </string>
    <string name="enter_location_here">Enter location here</string>
    <string name="enter_description_here">Enter description here</string>
    <string name="usable_balance">Usable balance</string>
    <string name="credit_label">Credit</string>
    <string name="credits_label">Credits</string>
    <string name="empty_credit">Please enter a credit!</string>
    <string name="not_enough_credit">You don\'t have enough credits!</string>
    <string name="credit_less_than_or_equal_to_zero">Credits should be greater than 0</string>
    <string name="confirm">Confirm</string>
    <string name="create_mission_select_category_instruction">Select a category:</string>
    <string-array name="sub_service_type_assembling">
        <item>Furniture Assembly</item>
        <item>Product Assembly</item>
        <item>Cable Assembly</item>
        <item>Mechanical Assembly</item>
    </string-array>
    <string-array name="sub_service_type_cleaning">
        <item>Residential Cleaning</item>
        <item>Commercial Cleaning</item>
        <item>Carpet Cleaning</item>
        <item>Window Cleaning</item>
    </string-array>
    <string-array name="sub_service_type_gardening">
        <item>Lawn Care</item>
        <item>Tree and Shrub Care</item>
        <item>Garden Ned Maintenance</item>
    </string-array>
    <string-array name="sub_service_type_moving">
        <item>Residential Moving</item>
        <item>Commercial Moving</item>
        <item>Long-Distance Moving</item>
        <item>Packing and Unpacking</item>
    </string-array>
    <string-array name="sub_service_type_renovation">
        <item>Painting and Wall Finishing</item>
        <item>Flooring</item>
        <item>Home Addition</item>
        <item>Bathroom Renovation</item>
    </string-array>
    <string-array name="sub_service_type_repair">
        <item>Appliance</item>
        <item>Electrical</item>
        <item>Furniture</item>
        <item>Plumber</item>
    </string-array>
    <string-array name="sub_service_type_delivering">
        <item>Food Delivery</item>
        <item>Package Delivery</item>
        <item>Grocery Delivery</item>
        <item>Furniture Delivery</item>
    </string-array>
    <string-array name="sub_service_type_seasonal">
        <item>Show Shoveling</item>
        <item>Gutter Cleaning</item>
        <item>Leaf Clean Up</item>
        <item>Yard Work</item>
    </string-array>
    <string name="assembling">Assembling</string>
    <string name="cleaning">Cleaning</string>
    <string name="gardening">Gardening</string>
    <string name="moving">Moving</string>
    <string name="renovation">Renovation</string>
    <string name="repair">Repair</string>
    <string name="delivering">Delivering</string>
    <string name="seasonal">Seasonal</string>
    <string-array name="service_type_list">
        <item>@string/assembling</item>
        <item>@string/cleaning</item>
        <item>@string/gardening</item>
        <item>@string/moving</item>
        <item>@string/renovation</item>
        <item>@string/repair</item>
        <item>@string/delivering</item>
        <item>@string/seasonal</item>
    </string-array>
    <string name="create_mission_category_label">Category:</string>
    <string name="create_mission_select_sub_service_type_instruction">To be more specific:</string>
    <string name="abort_create_mission_btn_text">Abort Mission</string>
    <string name="abort_create_mission_alert_title">Abort this Mission?</string>
    <string name="abort_create_mission_alert_msg">Changes will not be saved.</string>
    <string name="start_time_err_msg">Start time is invalid.</string>
    <string name="end_time_err_msg">End time is invalid.</string>
    <string name="location_err_msg">Location is invalid.</string>
    <string name="description_err_msg">Description cannot be longer than 500 words.</string>
    <string name="create_mission_result_success">Mission Created</string>
    <string name="create_mission_result_failed">Mission Aborted</string>
    <string name="go_back_to_home_page">Go Back to Home Page</string>
    <string name="view_wallet">View Wallet</string>
    <string name="top_desc">You have more Credits to create Missions now</string>
    <string name="top_up_success">Top Up Success</string>
</resources>