<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_100"
    android:backgroundTint="@color/white_100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_100"
        android:orientation="vertical"
        android:padding="25dp"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/ezTollLogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="60dp"
            android:layout_gravity="center"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/welcome_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="@color/black_100"
            android:textSize="18sp"
            android:textStyle="bold|normal" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:hint="@string/enter_email_address"
            app:boxStrokeWidth="1dp"
            app:shapeAppearanceOverlay="@style/Button4">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:minHeight="56dp"
                android:textColor="@color/black_100"
                android:textSize="13sp"
                android:textStyle="normal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:hint="@string/enter_password"
            app:boxStrokeWidth="1dp"
            app:endIconMode="password_toggle"
            app:shapeAppearanceOverlay="@style/Button4">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:minHeight="56dp"
                android:textColor="@color/black_100"
                android:textSize="13sp"
                android:textStyle="normal"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textColor="@color/bright_blue_90"
            android:textSize="14sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/very_dark_blue_100"
            android:elevation="15dp"
            android:gravity="center"
            android:minHeight="56dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white_100"
            android:textSize="17sp"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        >
        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="@color/black_100"
            android:layout_weight="1"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textAlignment="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/black_100"
            android:textSize="14sp"
            android:textStyle="normal" />
        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="@color/black_100"
            android:layout_weight="1"
            android:layout_marginRight="8dp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account"
            android:textAlignment="center"
            android:textColor="@color/black_100"
            android:textSize="14sp"
            android:textStyle="normal" />
        <TextView
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/signup"
            android:textAlignment="center"
            android:textColor="@color/bright_blue_90"
            android:textSize="14sp"
            android:textStyle="normal" />
    </LinearLayout>
        <com.facebook.login.widget.LoginButton
            android:id="@+id/FacebookSignInBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            />
    <com.google.android.gms.common.SignInButton
        android:id="@+id/GoogleSignInBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:colorScheme="light"
        app:buttonSize="wide" />
    </LinearLayout>
</ScrollView>
