<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vmCreateMissionDetails"
            type="com.team2.handiwork.viewModel.FragmentCreateMissionDetailsViewModel" />

    </data>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:id="@+id/tv_category"
                style="@style/textview_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="24dp"
                android:layout_gravity="start"
                android:text="@string/category_label"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                />
            <TextView
                android:id="@+id/tv_category_content"
                style="@style/textview_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="24dp"
                android:text="service type show here"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_category"
                app:layout_constraintHorizontal_bias="0.0"
                />
            <TextView
                android:id="@+id/tv_start_time"
                style="@style/textview_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="24dp"
                android:layout_gravity="start"
                android:text="@string/start_time_label"
                app:layout_constraintTop_toBottomOf="@id/tv_category"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                />
            <Button
                android:id="@+id/btn_start_time"
                style="@style/SelectTimeButton"
                android:layout_gravity="center"
                android:layout_marginTop="6dp"
                android:layout_marginStart="24dp"
                android:text="@string/select_a_time"
                app:layout_constraintTop_toBottomOf="@id/tv_start_time"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth_percent="0.4"
                />
            <TextView
                android:id="@+id/tv_end_time"
                style="@style/textview_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"

                android:layout_gravity="start"
                android:text="@string/end_time_label"
                app:layout_constraintTop_toBottomOf="@id/tv_category"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/btn_end_time"
                app:layout_constraintHorizontal_bias="0.0"
                />

            <Button
                android:id="@+id/btn_end_time"
                style="@style/SelectTimeButton"
                android:layout_gravity="center"
                android:layout_marginTop="6dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="23dp"
                android:text="@string/select_a_time"
                app:layout_constraintTop_toBottomOf="@id/tv_start_time"
                app:layout_constraintStart_toEndOf="@id/btn_start_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintWidth_percent="0.4"
                />
            <TextView
                android:id="@+id/tv_location"
                style="@style/textview_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="24dp"
                android:layout_gravity="start"
                android:text="@string/location_label"
                app:layout_constraintTop_toBottomOf="@id/btn_start_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                />
            <EditText
                android:id="@+id/et_location"
                style="@style/edittext_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/enter_location_here"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_location" />
            <TextView
                android:id="@+id/tv_add_photos"
                style="@style/textview_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="24dp"
                android:layout_gravity="start"
                android:text="@string/add_photos_label"
                app:layout_constraintTop_toBottomOf="@id/et_location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_camera"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                app:cornerRadius="20dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:backgroundTint="@color/white"
                app:icon="@drawable/ic_baseline_camera_alt_24"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:layout_constraintTop_toBottomOf="@id/et_location"
                app:layout_constraintStart_toEndOf="@id/tv_add_photos"
                app:layout_constraintEnd_toEndOf="parent"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_photos"
                android:visibility="visible"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_add_photos"
                android:layout_marginBottom="20dp"
                tools:listitem="@layout/recycle_view_service_type_item"
                />
            <EditText
                android:id="@+id/textArea_information"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="20dp"
                android:padding="20dp"
                android:background="@drawable/text_area"
                android:gravity="top|left"
                android:inputType="textMultiLine"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:lines="10"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:scrollHorizontally="false"
                android:hint="@string/enter_description_here"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_photos"
                app:layout_constraintBottom_toTopOf="@id/btn_next"
                />
            <Button
                android:id="@+id/btn_next"
                style="@style/PrimaryButton"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>